! Fixed blog homepage (MessageIndex) when viewed in responsive mode. Fought on this for many days, until I realized a simple instruction would fix it, one I hadn't used in a couple of years I think... Anyway, it's always amusing that specifying for something to be 'fixed' will actually make it 'flexible', but you know how it is... ;) (sections.css)
! IE also needs two extra tweaks for Aeva embed responsiveness. Not Chrome, go figure. Didn't test elsewhere. (media.css)

! Zoomedia popups were incorrectly centered in desktop browsers. That's because window.innerWidth includes the scrollbar, which we don't want. Hopefully, just going for the minimum value between window.innerWidth and win_width should fix it all. (zoomedia.js)

! Fixed sidebar margins in Wuthering. (Wuthering/extra.css)

! Fixed last-minute inheritance bug in Zoomedia. (zoom.css)

* Spacinazi. Well, maybe one day I'll do it the other around and remove all of those extra linebreaks, whatever... Just lemme be misunderstood. (sections.css)

--- a/Themes/default/skins/Wine/Wuthering/extra.css
+++ b/Themes/default/skins/Wine/Wuthering/extra.css
@@ -56,7 +56,10 @@ $darkgrad = #f3f2f0
 	background: #faf8f6
 
 #edge
-	padding: 0
+	padding: 8px 0 0
+
+#main
+	padding-top: 0
 
 #sidebar
 	border: 1px solid #ccc
